--- a/index.html
+++ b/index.html
@@ -8,25 +8,42 @@
                 margin: 30px 0;
             }
             .aws-logo {
-                width: 250px;
+                width: 200px;
                 border: 2px solid #FF9900;
+                border-radius: 5px;
             }
             .scnd-sec {
                 background-color: #232F3E;
                 color: #FFFFFF;
             }
             .scnd-sec-div {
-                padding: 50px 0;
-                height: 400px;
+                padding: 80px 0;
             }
             .signin-txt {
                 text-align: right;
+                padding-top: 30px;
             }
             .signin-frm {
                 padding-left: 30px;
             }
             .inp-fld {
-                width: 300px;
+                width: 100%;
+                margin-bottom: 15px;
+            }
+            .signin-frm {
+                padding: 30px;
+                border-radius: 5px;
+                border: 2px solid #FF9900;
+            }
+            .signin-btn {
+                background-color: #FF9900;
+                color: #FFFFFF;
+                border: none;
+                width: 160px;
+                font-size: 18px;
+                font-weight: 600;
+                padding: 5px 0;
+                margin-top: 5px;
             }
         </style>
     </head>
@@ -45,19 +62,21 @@
         <section class="scnd-sec">
             <div class="container">
                 <div class="scnd-sec-div row">
-                    <div class="col-4">
+                    <div class="col-5">
                         <h2 class="signin-txt">Sign in</h2>
                     </div>
-                    <div class="col-8">
+                    <div class="col-5">
                         <div class="signin-frm">
                             <form method="POST">
                                 <h6>Email Address</h6>
-                                <input type="text" class="inp-fld" name="email" /><br /><br />
+                                <input type="text" class="inp-fld" name="email" /><br />
                                 <h6>Password</h6>
                                 <input type="password" class="inp-fld" name="password" /><br />
+                                <input type="submit" class="signin-btn rounded" value="Sign in" />
                             </form>
                         </div>
                     </div>
+                    <div class="col-2"></div>
                 </div>
             </div>
         </section>
